fix user-status-container overflow on public profile page

--- a/github-wide.css
+++ b/github-wide.css
@@ -27,7 +27,8 @@
   width: calc(33.3% - 10px) !important;
 }
 
-.u-photo {
+.u-photo,
+.user-status-container {
   max-width: 250px;
 }
 .u-photo .avatar {
